...
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hca-60-Use">
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="654"/>
                                        <subviews>
                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="6no-U5-A2E">
                                                <rect key="frame" x="30" y="350" width="315" height="254"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="bottom" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zPQ-f9-7vk">
                                                        <rect key="frame" x="0.0" y="0.0" width="315" height="18"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" tag="100" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="z15-KD-5IV">
...
                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                                        <textInputTraits key="textInputTraits" returnKeyType="next"/>
                                                        <connections>
                                                            <outlet property="delegate" destination="BYZ-38-t0r" id="vQg-Ie-eNm"/>
                                                        </connections>
                                                    </textField>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="bottom" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I53-DP-Caf">
                                                        <rect key="frame" x="0.0" y="88" width="315" height="18"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" tag="101" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="i8e-PX-c8h">
...
                                                        <rect key="frame" x="0.0" y="209" width="315" height="45"/>
                                                        <color key="backgroundColor" red="0.1442536046" green="0.3768716882" blue="0.61736965669999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="45" id="LEi-PD-0eP"/>
                                                        </constraints>
                                                        <fontDescription key="fontDescription" name="HelveticaNeue-CondensedBold" family="Helvetica Neue" pointSize="16"/>
                                                        <state key="normal" title="Login">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
                                                        <connections>
                                                            <action selector="handleLoginTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nA9-F7-10d"/>
                                                        </connections>
                                                    </button>
...
