...
    func loginFailedWith(message: String) {
        self.autoDismissAlert(title: message, message: nil)
        print(#file, #line, message)
    }
    
    func loginSuccess(for user: User) {
        self.autoDismissAlert(title: "Hello" , message: user.name.full.capitalized, dismissAfter: 2) {
            self.loginPresenter.navigateToHome()
        }
    }
}


...
